--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/login.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/login.html
@@ -8,14 +8,15 @@
 	<div layout:fragment="content">
 		<h1 class="mensagem">Tela de login</h1>
 		
-		<p th:if="${param.logout}" class="alert">Logout feito com sucesso</p>
-		<p th:if="${param.error}" class="alert alert-error">Login incorreto. Tente novamente !</p>
-		
-		<form name="form" th:action="@{/login}" action="/login" method="POST">
-			<input type="text" name="username" placeholder="Username" />
-			<input type="password" name="password" placeholder="Password" />
-			<input type="submit" id="login" value="Login" class="btn btn-primary" />
-		</form>
+		<div class="block" style="position: absolute; left: 39%;">
+			<p th:if="${param.logout}" class="alert">Logout feito com sucesso</p>
+			<p th:if="${param.error}" class="alert alert-error">Login incorreto. Tente novamente !</p>
+			<form class="simple-border" name="form" th:action="@{/login}" action="/login" method="POST" style="padding: 20px">
+				<input type="text" name="username" placeholder="Username" style="width: 250px" /><div><br/></div>
+				<input type="password" name="password" placeholder="Password" style="width: 250px" /><div><br/></div>
+				<input type="submit" id="login" value="Login" class="btn btn-primary" />
+			</form>
+		</div>
 		
 	</div>	
 	
