fix(lavanderia): corrigir cancelar pedido.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
@@ -32,12 +32,13 @@
 	                <td class="th10 simple-border" th:text="${pedido.situacao}"></td>
 	                <td class="th15 simple-border" th:if="${pedido.situacao == T(br.com.cwi.crescer.lavanderia.domain.Pedido.SituacaoPedido).PENDENTE}">
 	                	<form th:action="@{/pedidos/cancelar}" th:object="${pedido}" method='post'>
+	                		<input type="hidden" th:name="idPedido" th:value="${pedido.idPedido}"></input>
 						   <button type='submit' >Cancelar peddio</button>
 						</form>
 					</td>
 					<td class="th15 simple-border" th:if="${pedido.situacao == T(br.com.cwi.crescer.lavanderia.domain.Pedido.SituacaoPedido).PROCESSADO}">
 	                	<form th:action="@{/pedidos/retirar}" th:object="${pedido}" method='post'>
-						   <input type="hidden" th:field="*{idPedido}"></input>
+						   <input type="hidden" th:name="idPedido"></input>
 						   <button type='submit' >Retirar peddio</button>
 						</form>
 					</td>
