--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/exibe.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/exibe.html
@@ -75,7 +75,7 @@
 		                <th class="th15 simple-border">Situação</th>
 		                <th class="th15 simple-border">
 		                	<form th:action="@{/itens/processartodos}" th:object="${pedido}" method='post'>
-							   <input type="hidden" th:field="*{idPedido}"></input>
+							   <input type="hidden" th:field="*{idPedido}" th:name="idPedido" th:value="${pedido.idPedido}"></input>
 							   <button type='submit' >Processar todos</button>
 							</form>
 						</th>
@@ -89,6 +89,7 @@
 		                <td class="th15 simple-border" th:text="${item.situacao}"></td>
 		                <td class="th15 simple-border">
 		                	<form th:action="@{/itens/processar?idItem=} + ${item.idItem}" th:object="${pedido}" method='post'>
+							   <input type="hidden" th:field="*{idPedido}" th:name="idPedido" th:value="${item.idPedido}"></input>
 							   <button type='submit' >Processar item</button>
 							</form>
 						</td>
