listar clientes para pedido

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/listaClientes.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/listaClientes.html
@@ -33,7 +33,7 @@
 	                <td class="th15 simple-border" th:text="${cliente.cpf}"></td>
 	                <td class="th10 simple-border" th:text="${cliente.situacao}"></td>
 	                <td class="th10 simple-border"><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
-	                <td class="th10 simple-border"><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
+	                <td class="th10 simple-border"><a th:href="${'/pedidos/novo/' + cliente.id}">Selecionar</a></td>
 	            </tr>
 	        </table>
 	
